added nginx 00_custom_proxy.conf

--- a/EFCoreTest/appsettings.json
+++ b/EFCoreTest/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeDBConnection": "Server=AMIYA_DEVICE\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=True;TrustServerCertificate=True"
-    //"AWSPostgreSQLEmployeeDBConnection": "Host=demo-postgresql.c3ie8se007ou.eu-north-1.rds.amazonaws.com;Port=5432;Username=postgres;Password=Amiya2025#;Database=EmployeeDB;"
+    //"EmployeeDBConnection": "Server=AMIYA_DEVICE\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "AWSPostgreSQLEmployeeDBConnection": "Host=demo-postgresql.colygscm6hzh.us-east-1.rds.amazonaws.com;Port=5432;Username=postgres;Password=Amiya2025#;Database=EmployeeDB;"
   },
   "Authentication": {
     "Cognito": {
